--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
+    "@types/lodash": "^4.14.181",
     "antd": "^4.19.5",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^0.26.1",
     "graphql": "^16.3.0",
+    "lodash": "^4.17.21",
     "next": "12.1.4",
     "react": "17.0.0",
     "react-dom": "17.0.0",
@@ -26,6 +29,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "^2.4.8",
+    "@types/apollo-upload-client": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^7.32.0",
