--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "next": "12.1.4",
     "react": "17.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "17.0.0",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
@@ -30,6 +31,7 @@
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "^2.4.8",
     "@types/apollo-upload-client": "^17.0.0",
+    "@types/react-color": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^7.32.0",
