--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.0",
     "react-color": "^2.19.3",
     "react-dom": "17.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   },
