--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "antd": "^4.19.5",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "next": "12.1.4",
     "react": "17.0.0",
     "react-color": "^2.19.3",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.0",
     "react-infinite-scroller": "^1.2.6",
     "typescript": "^4.6.3",
@@ -34,6 +37,7 @@
     "@graphql-codegen/typescript": "^2.4.8",
     "@types/apollo-upload-client": "^17.0.0",
     "@types/react-color": "^3.0.6",
+    "@types/react-datepicker": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^7.32.0",
