--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.5.10",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.10",
     "@material-ui/core": "^4.12.4",
     "@types/lodash": "^4.14.181",
     "antd": "^4.19.5",
@@ -28,6 +29,7 @@
     "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.0",
+    "react-hook-form": "^7.31.3",
     "react-infinite-scroller": "^1.2.6",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
