--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.3",
     "next": "12.1.4",
     "react": "17.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.0",
