--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.10",
@@ -19,8 +23,10 @@
     "antd": "^4.19.5",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.26.1",
+    "babel-loader": "^8.2.5",
     "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
+    "html-to-react-components": "^1.6.6",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
