--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "17.0.0",
     "react-hook-form": "^7.31.3",
     "react-infinite-scroller": "^1.2.6",
+    "react-select": "^5.3.2",
     "react-simple-chatbot": "^0.6.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
