--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^2.8.10",
     "@material-ui/core": "^4.12.4",
     "@types/lodash": "^4.14.181",
+    "@types/react-slick": "^0.23.8",
     "antd": "^4.19.5",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.26.1",
@@ -40,6 +41,8 @@
     "react-infinite-scroller": "^1.2.6",
     "react-select": "^5.3.2",
     "react-simple-chatbot": "^0.6.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
