--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.26.1",
     "babel-loader": "^8.2.5",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
     "html-to-react-components": "^1.6.6",
@@ -34,6 +35,7 @@
     "next": "12.1.4",
     "react": "17.0.0",
     "react-beautiful-dnd": "13.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.0",
