--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "graphql": "^16.3.0",
     "html-to-react-components": "^1.6.6",
     "json-server": "^0.17.0",
