--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "html-to-react-components": "^1.6.6",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
     "next": "12.1.4",
     "react": "17.0.0",
     "react-beautiful-dnd": "13.0.0",
+    "react-big-calendar": "^1.5.0",
     "react-bootstrap": "^2.4.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
