--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-beautiful-dnd": "13.0.0",
     "react-big-calendar": "^1.5.0",
     "react-bootstrap": "^2.4.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.0",
@@ -45,6 +46,7 @@
     "react-select": "^5.3.2",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
+    "react-tooltip": "^4.2.21",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
@@ -54,6 +56,7 @@
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "^2.4.8",
     "@types/apollo-upload-client": "^17.0.0",
+    "@types/react-calendar-heatmap": "^1.6.3",
     "@types/react-color": "^3.0.6",
     "@types/react-datepicker": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
