--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@hookform/resolvers": "^2.8.10",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.10.2",
     "@types/lodash": "^4.14.181",
     "@types/react-slick": "^0.23.8",
     "antd": "^4.19.5",
