--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@babel/preset-react": "^7.17.12",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.8.10",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.2",
