--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.10.2",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "^2.4.8",
     "@types/apollo-upload-client": "^17.0.0",
