--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-beautiful-dnd": "13.0.0",
     "react-big-calendar": "^1.5.0",
     "react-bootstrap": "^2.4.0",
+    "react-calendar": "^3.7.0",
     "react-calendar-heatmap": "^1.9.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
