--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hookform/resolvers": "^2.8.10",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "@types/lodash": "^4.14.181",
     "@types/react-slick": "^0.23.8",
     "antd": "^4.19.5",
