--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-calendar-heatmap": "^1.9.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.0",
     "react-hook-form": "^7.31.3",
     "react-infinite-scroller": "^1.2.6",
