--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.0",
-    "react-hook-form": "^7.31.3",
+    "react-hook-form": "^7.35.0",
     "react-infinite-scroller": "^1.2.6",
+    "react-quill": "^2.0.0",
     "react-select": "^5.3.2",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
