--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-select": "^5.3.2",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.4",
     "react-switch": "^7.0.0",
     "react-tooltip": "^4.2.21",
     "slick-carousel": "^1.8.1",
