--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-calendar": "^3.7.0",
     "react-calendar-heatmap": "^1.9.0",
     "react-color": "^2.19.3",
+    "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.0",
