--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-bootstrap": "^2.4.0",
     "react-calendar": "^3.7.0",
     "react-calendar-heatmap": "^1.9.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-color": "^2.19.3",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
