--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
     "html-to-react-components": "^1.6.6",
+    "i18next": "^22.4.5",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -53,6 +54,7 @@
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.0",
     "react-hook-form": "^7.40.0",
+    "react-i18next": "^12.1.1",
     "react-infinite-scroller": "^1.2.6",
     "react-quill": "^2.0.0",
     "react-select": "^5.3.2",
