--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/lodash": "^4.14.181",
     "@types/react-slick": "^0.23.8",
     "antd": "^4.19.5",
+    "apexcharts": "^3.37.2",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.26.1",
     "babel-loader": "^8.2.5",
@@ -42,6 +43,7 @@
     "moment": "^2.29.4",
     "next": "12.1.4",
     "react": "17.0.0",
+    "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "13.0.0",
     "react-big-calendar": "^1.5.0",
     "react-bootstrap": "^2.4.0",
