--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
+    "highcharts": "^10.3.3",
+    "highcharts-react-official": "^3.2.0",
     "html-to-react-components": "^1.6.6",
     "i18next": "^22.4.5",
     "json-server": "^0.17.0",
