--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
     "highcharts": "^10.3.3",
+    "highcharts-pattern-fill": "^3.0.3",
     "highcharts-react-official": "^3.2.0",
     "html-to-react-components": "^1.6.6",
     "i18next": "^22.4.5",
+    "jquery": "^3.6.4",
+    "jsdom": "^21.1.1",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -78,6 +81,7 @@
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "^2.4.8",
     "@types/apollo-upload-client": "^17.0.0",
+    "@types/jquery": "^3.5.16",
     "@types/react-calendar-heatmap": "^1.6.3",
     "@types/react-color": "^3.0.6",
     "@types/react-datepicker": "^4.4.1",
