--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/react-calendar-heatmap": "^1.6.3",
     "@types/react-color": "^3.0.6",
     "@types/react-datepicker": "^4.4.1",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^7.32.0",
