--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jquery": "^3.6.4",
     "jsdom": "^21.1.1",
     "json-server": "^0.17.0",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "12.1.4",
