--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "exceljs": "^4.3.0",
     "graphql": "^16.3.0",
     "highcharts": "^10.3.3",
     "highcharts-pattern-fill": "^3.0.3",
@@ -71,10 +72,12 @@
     "react-spinners": "^0.13.4",
     "react-switch": "^7.0.0",
     "react-tooltip": "^4.2.21",
+    "react-xls": "^0.1.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
