--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "highcharts-pattern-fill": "^3.0.3",
     "highcharts-react-official": "^3.2.0",
     "html-to-react-components": "^1.6.6",
+    "html2canvas": "^1.4.1",
     "i18next": "^22.4.5",
     "jquery": "^3.6.4",
     "jsdom": "^21.1.1",
