--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.26.1",
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
+    "chart.js": "^4.4.1",
     "date-fns": "^2.28.0",
     "exceljs": "^4.3.0",
     "graphql": "^16.3.0",
@@ -57,6 +58,7 @@
     "react-bootstrap": "^2.4.0",
     "react-calendar": "^3.7.0",
     "react-calendar-heatmap": "^1.9.0",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-color": "^2.19.3",
     "react-cookie": "^4.1.1",
